Shorten the comments in the app registry